Apply various fade-in animations to prevent initialization flicker, and nicer entry of features as they load Bringing back the 0 in speed mod mode as the calculator feels uninitialized otherwise (when the rest of the UI hasn't loaded yet)

--- a/src/css/calc.css
+++ b/src/css/calc.css
@@ -72,6 +72,20 @@ body {
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
+@keyframes fade-in-delayed {
+    from {
+        opacity: 0;
+    }
+
+    80% {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
 #calculator ul, #menu ul {
     margin: 0;
     padding: 0;
@@ -92,6 +106,8 @@ body {
     font-size: calc(5vh + 5vw);
     text-align: right;
     position: relative;
+    animation-name: fade-in-delayed;
+    animation-duration: .6s;
 }
 
 #display > div {
@@ -131,6 +147,8 @@ body {
     font-size: 14px;
     font-weight: 500;
     opacity: 0;
+    animation-name: fade-in-delayed;
+    animation-duration: .6s;
 }
 
 .keypad {
